# tauri-plugin-debug-tools

./: .gitignore  .npmignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  biome.json  build.rs  package-lock.json  package.json  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml  release.yml
coverage/: consoleLogger.ts.html  debugBridge.ts.html  index.html  logAdapter.ts.html  screenshotHelper.ts.html
examples/: README.md  package.json
examples/src/: index.html  main.js
examples/src-tauri/: Cargo.toml  tauri.conf.json
examples/src-tauri/capabilities/: default.json
examples/src-tauri/src/: lib.rs  main.rs
examples/tests/: e2e.mac.test.ts  e2e.test.ts
guest-js/: consoleLogger.ts  debugBridge.ts  domCapture.ts  index.ts  logAdapter.ts  screenshotHelper.ts
permissions/: debug-with-logging.toml  default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: append_debug_logs.toml  auto_capture_debug_snapshot.toml  capture_dom_snapshot.toml  capture_full_debug_state.toml  capture_webview_state.toml  clear_debug_log_files_command.toml  copy_screenshot_to_debug_dir.toml  get_console_logs.toml  get_log_directory.toml  reset_debug_logs.toml  send_debug_command.toml  write_debug_snapshot.toml
permissions/schemas/: schema.json
skills/debug-tauri/: SKILL.md
skills/debug-tauri/references/: IPC_COMMANDS.md  LOGGING.md  REFERENCE.md  SCREENSHOTS.md  TROUBLESHOOTING.md
skills/debug-tauri/scripts/: http_debug.sh  validate_setup.sh
src/: commands.rs  config.rs  lib.rs
src/adapters/: filesystem.rs  logging.rs  mod.rs
src/application/: use_cases.rs
src/domain/: models.rs  ports.rs
tests/: consoleLogger.test.ts  debugBridge.test.ts  index.test.ts  logAdapter.test.ts  screenshotHelper.test.ts
