[package]
name = "examples-demo-app"
version = "0.1.2"
description = "A Tauri App"
authors = ["8beeeaaat <8beeeaaat@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/8beeeaaat/tauri-plugin-debug-tools"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "examples_demo_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-debug-tools = { path = "../.." }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
